# tele-gold-prices-bot

./: .env  .gitignore  Bot.py  Config.py  Fetch.py  bot.py  chat.json  config.py  fetch_pric3.py  gold_prices.json  main.py  onetime.py  pyproject.toml  requirements.txt
jsons/: chats.json  prices.json
tmp/: prices.json
